--- a/src/app/src/main/res/layout/activity_mood_history.xml
+++ b/src/app/src/main/res/layout/activity_mood_history.xml
@@ -22,7 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
-            android:src="@android:drawable/ic_input_add"/>
+            android:backgroundTint="@color/design_default_color_primary"
+            android:src="@drawable/ic_add_circle_outline_black_24dp"/>
 
     </RelativeLayout>
 
