Add method in nav helper to setup navigation

--- a/src/app/src/main/res/layout/activity_followers.xml
+++ b/src/app/src/main/res/layout/activity_followers.xml
@@ -6,4 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".view.FollowersActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/relLayout1"
+            >
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/relLayout2"
+            >
+        </RelativeLayout>
+
+
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
