--- a/src/app/src/main/res/layout/activity_map.xml
+++ b/src/app/src/main/res/layout/activity_map.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -29,4 +29,4 @@
         android:layout_marginTop="40dp"
         android:paddingRight="10dp"/>
 
-</Fragment>
+</fragment>
