--- a/src/app/src/main/res/layout/activity_signup.xml
+++ b/src/app/src/main/res/layout/activity_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@color/colorWhite"
     tools:context=".view.LoginActivity">
 
     <ImageView
@@ -42,6 +42,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:background="@drawable/round"
+        android:shadowColor="@color/colorPrimary"
         android:ems="10"
         android:hint="👤  Username"
         android:inputType="textEmailAddress"
