--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#2D3142</color>
     <color name="colorPrimaryDark">#0C100F</color>
     <color name="colorAccent">#D81B60</color>
     <color name="color_happy">#008000</color>
@@ -8,4 +8,5 @@
     <color name="color_surprised">#b0c24a</color>
     <color name="colorWhite">#fff</color>
     <color name="colorGrey">#c3c3c3 </color>
+    <color name="colorAction">#70B7FF</color>
 </resources>
