--- a/src/app/src/main/res/layout/activity_profile_view.xml
+++ b/src/app/src/main/res/layout/activity_profile_view.xml
@@ -7,31 +7,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/layout_top_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/toolbar"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/logoutFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="1dp"
+        android:backgroundTint="@color/design_default_color_primary_dark"
+        android:text="Logout"
+        android:textColor="#FFFFFF"
+        android:textColorHint="@color/design_default_color_primary"
+        app:borderWidth="0dp"
+        app:cornerRadius="20dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    >
-
-        <include
-            layout="@layout/layout_top_toolbar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.appcompat.widget.AppCompatImageButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/editFAB"
-        android:layout_width="53dp"
-        android:layout_height="56dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
-        android:backgroundTint="#FFF"
+        app:backgroundTint="@color/design_default_color_primary"
         app:layout_constraintBottom_toTopOf="@id/bottomBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_menu_edit" />
@@ -40,39 +44,26 @@
         android:id="@+id/pictureContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         android:padding="40dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/logoutFAB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="1dp"
-            android:backgroundTint="@color/design_default_color_primary_dark"
-            android:text="Logout"
-            android:textColor="#FFFFFF"
-            android:textColorHint="@color/design_default_color_primary"
-            app:borderWidth="0dp"
-            app:cornerRadius="20dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/profilePictureEditFragment"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:src="@mipmap/ic_launcher_emoji"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.328"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="ContentDescription" />
+
 
         <TextView
             android:id="@+id/userNameFragmentProfile"
@@ -82,12 +73,13 @@
             android:layout_marginBottom="8dp"
             android:fontFamily="sans-serif"
             android:text="👤Username"
-            android:textColor="@color/colorPrimary"
+            android:textColor="#FFFFFF"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/profilePictureEditFragment"
             app:layout_constraintStart_toStartOf="@+id/profilePictureEditFragment"
             app:layout_constraintTop_toBottomOf="@+id/profilePictureEditFragment" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -150,7 +142,5 @@
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
