--- a/src/app/src/main/res/layout/layout_top_toolbar.xml
+++ b/src/app/src/main/res/layout/layout_top_toolbar.xml
@@ -7,19 +7,24 @@
   ~ Vestibulum commodo. Ut rhoncus gravida arcu.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layout_constraintTop_toTopOf="parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbarMain"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:navigationIcon="?attr/homeAsUpIndicator"
-        android:contextClickable="true"
+        android:layout_height="wrap_content"
+        android:minHeight="?attr/actionBarSize"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
 
-        app:layout_constraintTop_toTopOf="parent"
-        ></androidx.appcompat.widget.Toolbar>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+
