--- a/src/app/src/main/res/layout/activity_find.xml
+++ b/src/app/src/main/res/layout/activity_find.xml
@@ -8,36 +8,12 @@
     android:orientation="vertical"
     tools:context=".view.FindActivity">
 
-    <!--    <LinearLayout-->
-<!--        android:id="@+id/linearLayout1"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:layout_marginTop="100dp">-->
-
-<!--        <EditText-->
-<!--            android:id="@+id/af_username_follow"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:ems="10"-->
-<!--            android:inputType="textPersonName"-->
-<!--            android:hint="Username to Follow" />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/af_follow_button"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:text="Follow!" />-->
-
-<!--    </LinearLayout>-->
-
-    <LinearLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -48,42 +24,36 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="Username Search"
-            android:inputType="textPersonName" />
-
+            android:inputType="textPersonName">
+        </EditText>
         <Button
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/search_button_text" />
-    </LinearLayout>
+            android:text="@string/search_button_text">
+        </Button>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <ListView
-        android:id="@+id/result_list"
-        android:layout_width="match_parent"
-        android:layout_height="487dp"
-        app:layout_anchor="@+id/linearLayout"
-        app:layout_anchorGravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-    </ListView>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="parent">
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+        <ListView
+            android:id="@+id/result_list"
+            android:layout_width="match_parent"
+            android:layout_height="550sp"
+            app:layout_constraintBottom_toTopOf="@+id/bottomNavView_Bar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        </ListView>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavView_Bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/white_grey_border_top"
-        app:layout_anchor="@+id/linearLayout"
-        app:layout_anchorGravity="bottom|center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_navigation_menu" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/bottom_navigation_menu" >
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+
+
 
 </LinearLayout>
