--- a/src/app/src/main/res/layout/activity_following.xml
+++ b/src/app/src/main/res/layout/activity_following.xml
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/add_city_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="8"
-            />
-
-        <EditText
-            android:id="@+id/add_province_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="7"
-            />
-
-        <Button
-            android:id="@+id/add_city_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add City" />
-    </LinearLayout>
+<include
+    android:id="@+id/toolbar"
+    layout="@layout/layout_top_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+   />
 
     <ListView
         android:id="@+id/list_user_following"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
 
     </ListView>
 
-</LinearLayout>
+<!--</LinearLayout>-->
+
+<androidx.constraintlayout.widget.ConstraintLayout
+android:id="@+id/bottomBar"
+android:layout_width="match_parent"
+android:layout_height="50dp"
+app:layout_constraintBottom_toBottomOf="parent">
+
+<com.google.android.material.bottomnavigation.BottomNavigationView
+    android:id="@+id/bottomNavView_Bar"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/white_grey_border_top"
+    app:menu="@menu/bottom_navigation_menu"
+    />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
