--- a/src/app/src/main/res/layout/content_user.xml
+++ b/src/app/src/main/res/layout/content_user.xml
@@ -27,21 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="@+id/city_text"
-        app:layout_constraintTop_toBottomOf="@+id/city_text" />
+        app:layout_constraintStart_toStartOf="@+id/list_username_text"
+        app:layout_constraintTop_toBottomOf="@+id/list_username_text" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/deleteBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:clickable="true"
-        app:backgroundTint="@android:color/background_light"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_delete" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
