fixed the feed ui

--- a/src/app/src/main/res/layout/activity_feed.xml
+++ b/src/app/src/main/res/layout/activity_feed.xml
@@ -42,5 +42,9 @@
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/mood_event_frag_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
