--- a/src/app/src/main/res/values/colors.xml
+++ b/src/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="colorWhite">#ffffff</color>
 
     <color name="colorPrimaryDark">#0C100F</color>
-    <color name="colorAccent">#D81B60</color>
+<!--    <color name="colorAccent">#D81B60</color>-->
+    <color name="colorAccent">#ADACB5</color>
     <color name="color_happy">#008000</color>
     <color name="color_neutral">#f498ad</color>
     <color name="color_surprised">#b0c24a</color>
