--- a/src/app/src/main/res/layout/activity_followers.xml
+++ b/src/app/src/main/res/layout/activity_followers.xml
@@ -34,6 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            app:labelVisibilityMode="labeled"
             android:id="@+id/bottomNavView_Bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
