--- a/src/app/src/main/res/layout/activity_find.xml
+++ b/src/app/src/main/res/layout/activity_find.xml
@@ -33,12 +33,12 @@
             android:hint="Username Search"
             android:inputType="textPersonName">
         </EditText>
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/sign_in_button"
+            android:backgroundTint="@color/colorAction"
             android:textColor="@color/colorWhite"
             android:text="@string/search_button_text" />
         
