--- a/src/app/src/main/res/layout/activity_search.xml
+++ b/src/app/src/main/res/layout/activity_search.xml
@@ -34,6 +34,7 @@
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorAction"
             android:text="@string/search_button_text" />
 
     </LinearLayout>
