--- a/src/app/src/main/res/layout/activity_add_mood_event.xml
+++ b/src/app/src/main/res/layout/activity_add_mood_event.xml
@@ -77,21 +77,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:backgroundTint="@color/fui_bgTwitter"
+                android:backgroundTint="@color/colorAction"
                 android:text="Upload Image" />
 
             <Button
                 android:id="@+id/upload_cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorAccent"
+                android:backgroundTint="@color/colorAction"
                 android:text="Cancel Upload"
                 android:visibility="gone" />
             <Button
                 android:id="@+id/add_mood_event_submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/fui_bgTwitter"
+                android:backgroundTint="@color/colorAction"
                 android:text="Submit" />
             <RelativeLayout
                 android:layout_width="match_parent"
