--- a/src/app/src/main/res/layout/layout_top_toolbar.xml
+++ b/src/app/src/main/res/layout/layout_top_toolbar.xml
@@ -16,14 +16,16 @@
     app:layout_constraintTop_toTopOf="parent"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
+        android:background="@drawable/rectangle_border"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
