--- a/src/app/src/main/res/layout/activity_map.xml
+++ b/src/app/src/main/res/layout/activity_map.xml
@@ -12,39 +12,50 @@
     <FrameLayout
         android:id="@+id/mood_event_frag_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
 
 
-    <Button
-        android:id="@+id/user_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:text="Personal"
-        android:padding="10dp"
-        android:paddingRight="10dp"
-        android:stateListAnimator="@null"/>
 
-    <Button
-        android:id="@+id/friends_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:text="Friends"
-        android:padding="10dp"
-        android:layout_marginTop="40dp"
-        android:paddingRight="10dp"
-        android:stateListAnimator="@null"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/all_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right|top"
-        android:text="All"
-        android:padding="10dp"
-        android:layout_marginTop="80dp"
-        android:paddingRight="10dp"
-        android:stateListAnimator="@null"/>
+
+
+
+        <Button
+            android:stateListAnimator="@null"
+            android:id="@+id/user_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:text="Personal"
+            android:padding="10dp"
+            android:paddingRight="10dp"
+            />
+
+        <Button
+            android:id="@+id/friends_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:text="Friends"
+            android:padding="10dp"
+            android:paddingRight="10dp"
+            android:stateListAnimator="@null"/>
+
+        <Button
+            android:id="@+id/all_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|top"
+            android:text="All"
+            android:padding="10dp"
+            android:paddingRight="10dp"
+            android:stateListAnimator="@null"/>
+    </LinearLayout>
+
+    </FrameLayout>
 
 </fragment>
