--- a/src/app/src/main/res/layout/activity_login.xml
+++ b/src/app/src/main/res/layout/activity_login.xml
@@ -94,7 +94,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:textSize="18dp"
-        android:text="Signup!"
+        android:text="Signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textStyle="bold"
